@@ -118,8 +118,8 @@
     Default compile support for Java7+
     A few modules need to remain compatible with Java6 and must override and provide animal-sniffer configuration.
     -->
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
 
     <!--
     Sonar configuration.
@@ -404,7 +404,6 @@
             <forkMode>once</forkMode>
             <argLine>
               -Xmx300m
-              -XX:MaxPermSize=192m
               -XX:+HeapDumpOnOutOfMemoryError
               -XX:HeapDumpPath=${project.build.directory}/surefire-reports
             </argLine>
@@ -425,7 +424,6 @@
             <forkMode>always</forkMode>
             <argLine>
               -Xmx300m
-              -XX:MaxPermSize=192m
               -XX:+HeapDumpOnOutOfMemoryError
               -XX:HeapDumpPath=${project.build.directory}/failsafe-reports
             </argLine>
@@ -449,7 +447,7 @@
           <configuration>
             <signature>
               <groupId>org.codehaus.mojo.signature</groupId>
-              <artifactId>java17</artifactId>
+              <artifactId>java18</artifactId>
               <version>1.0</version>
             </signature>
           </configuration>
@@ -560,6 +558,14 @@
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
           <artifactId>sisu-maven-plugin</artifactId>
+          <dependencies>
+            <dependency>
+              <!-- version that can read Java8 classes -->
+              <groupId>org.eclipse.sisu</groupId>
+              <artifactId>org.eclipse.sisu.inject</artifactId>
+              <version>0.3.1</version>
+            </dependency>
+            </dependencies>
           <executions>
             <execution>
               <goals>
@@ -671,23 +677,18 @@
                 </requireMavenVersion>
 
                 <!--
-                Require Java 7+ for building
+                Require Java 8+ for building
                 -->
                 <requireJavaVersion>
-                  <version>[1.7,)</version>
+                  <version>[1.8,)</version>
                 </requireJavaVersion>
 
                 <!--
-                Check all bytecode (both compiled and via dependencies) targets Java 7 or below
+                Check all bytecode (both compiled and via dependencies) targets Java 8 or below
                 -->
                 <enforceBytecodeVersion>
-                  <maxJdkVersion>1.7</maxJdkVersion>
+                  <maxJdkVersion>1.8</maxJdkVersion>
                   <ignoreClasses>
-                    <!-- these optional classes are never loaded on Java7, xstream only loads them on Java8 -->
-                    <ignoreClass>*.thoughtworks.xstream.mapper.LambdaMapper</ignoreClass>
-                    <ignoreClass>*.thoughtworks.xstream.converters.reflection.LambdaConverter</ignoreClass>
-                    <ignoreClass>*.thoughtworks.xstream.converters.time.*</ignoreClass>
-                    <ignoreClass>*.thoughtworks.xstream.core.util.ISO8601JavaTimeConverter</ignoreClass>
                     <ignoreClass>module-info</ignoreClass>
                   </ignoreClasses>
                   <ignoredScopes>
